test/conformance/chainsaw/generating-policies/clone/sync/sync-modify-trigger/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sync-modify-trigger
