test/conformance/chainsaw/generating-policies/clone/sync/sync-modify-trigger/trigger-modified.yaml
apiVersion: v1
data:
  foo: Z2l0bGFi
kind: Secret
metadata:
  name: sync-modify-trigger
  namespace: default
  labels:
    argocd.argoproj.io/secret-type: repository
type: Opaque
