test/conformance/chainsaw/generating-policies/clone/sync/sync-modify-trigger/downstream-assert.yaml
apiVersion: v1
data:
  foo: YmFy
kind: Secret
metadata:
  name: sync-modify-trigger
  namespace: sync-modify-trigger
type: Opaque
