test/conformance/chainsaw/generating-policies/clone/sync/sync-modify-trigger/updated-downstream-assert.yaml
apiVersion: v1
data:
  foo: Z2l0bGFi
kind: Secret
metadata:
  name: sync-modify-trigger
  namespace: sync-modify-trigger
type: Opaque
